window. Thanks to John Durkin for the spot (Bug #1431). [David]

=item *

When creating a new media document via the related media popup, the popup
window now closes in Camino and Safari once the media document has been
created and saved, and in Safari it now properly updates the related media
element with which it is newly associated. Reported by Matt Rolf (Bug #1432).
[David]

=back

=head1 VERSION 1.11.1 (2008-10-03)

=head2 Improvements

=over

=item *

Added reverse date sorting option on desks (newest items first). Suggested by
Bret Dawson. [Greg Heo]

=item *

Updated the Xinha include script to reflect latest Xinha updates. [Matt Rolf]

=item *

Updated the SFTP mover to use the faster Net::SSH2, rather than the deprecated
Net::SFTP. [Sarah Mercier, Matt Rolf, Charlie Reitsma, Michael Herring]

=item *

The C<to_preview> option to C<< Bric::SOAP::Workflow->publish >> now previews
a document for all output channels, not just the primary output channel. The
same of course applies to the C<--to-preview> option to F<bric_soap>.
Suggested by Terence Bodola. [David]

=item *

Server errors sent in response to Ajax requests are now displayed in a modal
lightbox widget, rather than just getting shoved into the DOM. Also, effects
that should only occur on success (such as removing a story from a desk when
you move it) now only happen on success. [David]

=item *

Changed the behavior of C<< Bric::Util::Burner->publish_another >> so that,
rather than immediately publishing a document, it instead adds it to a list of
documents to be published and then returns. Documents added to the list are
then published when all other publish jobs in a given request have finished
publishing. The upshot is that if you bulk publish 50 stories that all trigger
the republication of a home page story, that home page story will be
republished only once, rather than 50 times. A side-effect is memory
consumption, so don't send too many stories to C<publish_another> from your